styles/menu.css
.fa-arrow-left {
    position: absolute;
    left: 0;
    top: 35%;
    font-size: 18px;
}

nav,
main {
    opacity: 1;
    animation: none;

}

.menu-card {

    background-color: #F6F6F6;
    width: 100%;
    height: 100%;
    justify-content: space-around;
}

.menu-card img {
    width: 40%;
    height: 100%;
    /* overflow: hidden; */
    display: flex;
    flex-wrap: wrap;
}

.menu-card i {
    font-size: 20px;
}

.fa-heart {
    display: flex;
    justify-content: flex-end;
    font-size: 25px;
    padding-bottom: 30px;
    padding-right: 15px;
}


.courses {
    width: fit-content;
}

.menu-sections {
    padding-left: 20px;

}

.steps-list {
    margin-bottom: 40px;
}

.courses::after {
    background-color: #99E2D0;
    height: 4px;
    width: 50%;
    content: "";
    display: block;
}

.restaurant__heading {
    position: relative;
}

.heart--pink,
.fa-heart {
    padding: 0px;
    right: 20px !important;
    bottom: 40px !important;
}

.steps-item:hover {
    background-color: #F6F6F6;
}

.steps-item:active {
    background-color: #F6F6F6;
}

.dish-item {
    flex-wrap: wrap;
    justify-content: space-between;
    row-gap: 0px;
    padding-left: 15px;
    position: relative;
    overflow: hidden;
    padding-right: 50px;


}

.fadein {
    animation: fadeIn 5s;
}

.dish-item:hover .green-tick,
.dish-item:active .green-tick {
    animation: 1s slideRight 1 forwards;
}

.green-tick i {
    padding-left: 0px;
}

.dish-item:hover .green-tick i {
    animation: 600ms spin 1 forwards;
}

.dish-item:active .green-tick i {
    animation: 600ms spin 1 forwards;
}

.dish-item:hover .price,
.dish-item:active .price {
    animation: 1s slideRight 1 forwards;
}

.green-tick {
    position: absolute;
    right: 0;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;

    background-color: #99E2D0;
    padding: 15px;
    transform: translateX(60px);
    font-size: 20px;

}

body {
    background-color: var(--main-bg-color);
}

main section {
    background-color: var(--main-bg-color);
    border-top-left-radius: 24px;
    border-top-right-radius: 24px;
}


.price {
    transform: translateX(30px);
    margin-right: 10px;
    text-align: end;
}

@keyframes fadein {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.dish-item {
    opacity: 0;
}


.dish-item:nth-child(1) {

    animation: fadein 1s forwards;

}

.dish-item:nth-child(1) {
    animation: fadein 1s forwards;

}

.dish-item:nth-child(1) {
    animation: fadein 1s forwards;

}

.dish-item:nth-child(2) {
    animation: fadein 1s forwards;
    animation-delay: 0.75s;
}

.dish-item:nth-child(3) {
    animation: fadein 1s forwards;
    animation-delay: 1.25s;
}

.dish-item:nth-child(4) {
    animation: fadein 1s forwards;
    animation-delay: 2s;
}

@keyframes spin {
    from {
        transform: rotate(0);
    }

    from {
        transform: rotate(-1turn);
    }
}


@keyframes slideRight {
    from {
        transform: translateX(40px)
    }

    to {
        transform: translateX(0);

    }
}

@keyframes slide {
    0% {
        top: 0;
    }

    25% {
        top: -4rem;
    }

    50% {
        top: -8rem;
    }

    72.5% {
        top: -12.25rem;
    }
}

.dish-item h5 {
    width: 100%;
    padding-left: 0px;
    font-weight: bolder;
    font-size: medium;
    padding-top: 10px;
}

.dish-item p {
    font-weight: lighter;
    padding-left: 0;
    font-size: medium;
    padding-bottom: 5px;
    white-space: nowrap;
    width: 70px;
}

.dish-item:hover p {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.hero-image {
    position: absolute;
    width: 100%;
    z-index: -1;
}

main {
    margin-top: 200px;
}

.hero-image img {
    height: 260px;
    width: 100%;
    object-fit: cover;
}


.border-radius {
    border-radius: 19px;
}

.width {
    width: 95%;
}

.steps-item {
    font-size: small;
    color: black;
}

.steps-item h5,
.steps-item p {
    color: black;
}

.steps-item i {
    color: white !important;
}

@media only screen and (min-width: 768px) {
    section {
        padding: 20px 200px;
    }
    header, .Logo{
        margin-top: 0;
    }
    main section{
        background-color: #F6F6F6;
    }

    .steps-list {
        max-width: 400px;
    }

}

